--- a/games/Makefile
+++ b/games/Makefile
@@ -975,6 +975,7 @@
     SUBDIR += vectoroids
     SUBDIR += vegastrike
     SUBDIR += vegastrike-data
+    SUBDIR += vcmi
     SUBDIR += violetland
     SUBDIR += viruskiller
     SUBDIR += vitetris
