--- a/devel/glibmm/Makefile
+++ b/devel/glibmm/Makefile
@@ -2,15 +2,14 @@
 # $FreeBSD$
 
 PORTNAME=	glibmm
-PORTVERSION=	2.56.0
-PORTREVISION=	2
+PORTVERSION=	2.60.0
 PORTEPOCH=	1
 CATEGORIES=	devel
 MASTER_SITES=	GNOME
-DIST_SUBDIR=	gnome2
+DIST_SUBDIR=	gnome
 
 MAINTAINER=	gnome@FreeBSD.org
-COMMENT=	C++ interfaces for glib2
+COMMENT=	C++ interfaces for glib-2.0
 
 LICENSE=	LGPL21
 
@@ -24,11 +23,15 @@ PLIST_SUB=	VERSION="2.4"
 USES+=		compiler:c++11-lang gettext gmake gnome libtool pathfix perl5 \
 		pkgconfig
 USE_GNOME=	glib20 libsigc++20
-GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
+
+GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--disable-documentation
 INSTALL_TARGET=	install-strip
 BINARY_WRAPPERS=	gm4
+
+PORTSCOUT?=	limitw:1,even
+PLIST_SUB=	VERSION="2.4"
 
 post-patch:
 .for d in docs examples tests
@@ -36,5 +39,3 @@ post-patch:
 .endfor
 
 .include <bsd.port.mk>
-
-.endif
